image not showing fix

--- a/final/stylelist.css
+++ b/final/stylelist.css
@@ -74,7 +74,7 @@ a {
 
   .welcome {
     height: 500px;
-    background-image: url(resources/welcome/bg3.jpg);
+    background-image: url(resources/welcome/bg3.webp);
     background-size: cover;
     background-repeat: no-repeat;
     max-width: 100vw;
@@ -158,8 +158,8 @@ a {
 .no-results-container {
     grid-column: 1 / -1;
     text-align: center;
+    background-color: transparent;
     padding: 50px 20px;
-    background-color: #f9f9f9;
     border-radius: 10px;
     margin-top: 20px;
 }
@@ -173,7 +173,7 @@ a {
 
 .no-results-message {
     font-size: 1.2rem;
-    color: #666;
+    color: var(--white);
     font-weight: 500;
 }
 
